feat(query): refactor + field allergies

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="ml10 mt10">
-<app-reverse-geocode-address></app-reverse-geocode-address>
+<app-query></app-query>
 <app-map></app-map>
 </div>
