un peu de design

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,20 @@
+<mat-toolbar class="green">
+    <span>LSK</span>
+
+    <!-- This fills the remaining space of the current row -->
+    <span class="fill-remaining-space"></span>
+
+    <span class="material-icons">
+        report_gmailerrorred
+    </span>
+    Signalez un nouvel arbre
+
+    <span class="material-icons">
+        person
+    </span>
+    Connectez-vous
+</mat-toolbar>
 <div class="ml10 mt10">
-<app-reverse-geocode-address></app-reverse-geocode-address>
-<app-map></app-map>
+    <app-reverse-geocode-address></app-reverse-geocode-address>
+    <app-map></app-map>
 </div>
