--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,20 +1,24 @@
 <mat-toolbar class="green">
-    <span>LSK</span>
+    <span>KSJ</span>
 
     <!-- This fills the remaining space of the current row -->
     <span class="fill-remaining-space"></span>
 
-    <span class="material-icons">
+    <span class="material-icons" matTooltip="Signalez un nouvel arbre">
         report_gmailerrorred
     </span>
-    Signalez un nouvel arbre
 
-    <span class="material-icons">
+    <span class="material-icons" matTooltip="Connectez-vous">
         person
     </span>
-    Connectez-vous
 </mat-toolbar>
-<div class="ml10 mt10">
-<app-query></app-query>
-<app-map></app-map>
+
+<div class="paragraphe">
+    <h1>Mon super titre</h1>
+    Un super paragraphe expliquant le projet.
+</div>
+
+<div>
+    <app-query></app-query>
+    <app-map></app-map>
 </div>
