--- a/front/src/app/map/map.component.html
+++ b/front/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-<div style="width: 800px; height: 500px;">
+<div class="map">
   <mgl-map
     [style]="'mapbox://styles/mapbox/streets-v9'"
     [zoom]="[12]"
