--- a/front/src/app/query/query.component.html
+++ b/front/src/app/query/query.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<div>
   <div style="display: flex; flex-direction: row;">
     <mat-form-field style="width: 250px;">
       <mat-label>Adresse</mat-label>
@@ -14,4 +14,4 @@
       <mat-icon>search</mat-icon>
     </button>
   </div>
-</mat-card>
+</div>
