--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -8,6 +8,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.material-icons {
+  transform: scale(1.25);
+  padding: 0 1em 0 0;
+}
+
 .green {
   background: lightgreen;
   color: rgb(0, 0, 0);
@@ -17,6 +22,12 @@
   /* This fills the remaining space, by using flexbox. 
      Every toolbar row uses a flexbox row layout. */
   flex: 1 1 auto;
+}
+
+.paragraphe {
+  margin: 0 auto;
+  text-align: center;
+  padding: 1em 0;
 }
 
 /* Responsive Styles */
