--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,21 +1,6 @@
-:host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
-  color: #333;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 .material-icons {
   transform: scale(1.25);
-  padding: 0 1em 0 0;
-}
-
-.green {
-  background: lightgreen;
-  color: rgb(0, 0, 0);
+  padding: 0 0 0 1em;
 }
 
 .fill-remaining-space {
@@ -24,10 +9,14 @@
   flex: 1 1 auto;
 }
 
-.paragraphe {
+.green-bg {
+  background: lightgreen;
+  color: #000;
+}
+
+footer {
   margin: 0 auto;
-  text-align: center;
-  padding: 1em 0;
+  padding: 1em;
 }
 
 /* Responsive Styles */
