--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -7,7 +7,7 @@
         <!-- This fills the remaining space of the current row -->
         <span class="fill-remaining-space"></span>
 
-        <a class="router" routerLink="/">
+        <a class="router" routerLink="/alert">
             <span class="material-icons" matTooltip="Signalez un nouvel arbre">
                 report_gmailerrorred
             </span>
