--- a/front/src/app/components/map/map.component.html
+++ b/front/src/app/components/map/map.component.html
@@ -5,20 +5,36 @@
     [center]="[3.87048, 43.610476]"
     (load)="map = $event"
   >
-  <mgl-geojson-source
-      id="user-position"
-      [data]="userPosition"
-  ></mgl-geojson-source>
-  <mgl-layer
-      *ngIf="userPosition"
-      id="points-user"
-      type="circle"
-      source="user-position"
-      [paint]="{
-          'circle-color': '#1B00FF',
-          'circle-radius': 5
-      }"
-  >
-  </mgl-layer>
+    <mgl-geojson-source
+        id="user-position"
+        [data]="userPosition"
+    ></mgl-geojson-source>
+    <mgl-layer
+        *ngIf="userPosition"
+        id="points-user"
+        type="circle"
+        source="user-position"
+        [paint]="{
+            'circle-color': '#1B00FF',
+            'circle-radius': 5
+        }"
+    >
+    </mgl-layer>
+
+    <mgl-geojson-source
+        id="trees"
+        [data]="trees"
+    ></mgl-geojson-source>
+    <mgl-layer
+        *ngIf="trees"
+        id="trees"
+        type="circle"
+        source="trees"
+        [paint]="{
+            'circle-color': 'green',
+            'circle-radius': 5
+        }"
+    >
+    </mgl-layer>
   </mgl-map>
 </div>
