fix api remove https

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
     <mat-toolbar class="green-bg">
         <a class="router" routerLink="/">
-            <span>KSJ</span>
+            <span><i>Balance Ton Arbre !</i></span>
         </a>
 
         <!-- This fills the remaining space of the current row -->
