--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="paragraphe-container">
-    <div class="paragraphe">
-        <h1>Mon super titre</h1>
-        Un super paragraphe expliquant le projet.
-    </div>
+    <h2 class="paragraphe">
+        <i>Découvrez les arbres allergènes autour de vous.</i>
+    </h2>
     <div>
         <app-query></app-query>
     </div>
