--- a/front/src/app/components/query/query.component.html
+++ b/front/src/app/components/query/query.component.html
@@ -41,6 +41,6 @@
     </button>
   </div>
   <div *ngIf="isGeocoding$ | async">
-    Recherche de l'adresse en cours... TODO spinner
+    Recherche de l'adresse en cours...
   </div>
 </div>
