--- a/front/src/app/components/map/map.component.html
+++ b/front/src/app/components/map/map.component.html
@@ -41,7 +41,7 @@
     >
     </mgl-layer>
   </mgl-map>
-  <div class="mt10" *ngIf="selectedTree">
+  <div class="center" *ngIf="selectedTree">
     {{ selectedTree }}
   </div>
 </div>
